--- a/_layouts/Index.html
+++ b/_layouts/Index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/peng/favicon.png">
 </head>
 <body>
     <h1>index</h1>
