--- a/_layouts/Index.html
+++ b/_layouts/Index.html
@@ -3,10 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
     <link rel="shortcut icon" type="image/x-icon" href="/peng/favicon.png">
+    <link rel="stylesheet" type="text/css" href="/peng/resource/css/init-css.css">
+    <link rel="stylesheet" type="text/css" href="/peng/resource/css/index.css">
+    <script type="text/javascript" src="/peng/resource/js/fontsize.js"></script>
 </head>
 <body>
-    <h1>index</h1>
-    {{content}}
+    <div class="border_container">
+        <div class="header_container" id="head"></div>
+        <div class="middle_container">
+            <div class="left_content">
+                <div class="tags">
+                    <ul>
+                        <li>1</li>
+                        <li>2</li>
+                        <li>3</li>
+                        <li>4</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="center_content">
+                {{content}}
+            </div>
+            <div class="right_content"></div>
+        </div>
+        <div class="foot_container"></div>
+    </div>
 </body>
+    <script>
+        window.onscroll = function(){
+            var scrollTop = document.documentElement.scrollTop || document.body.scrollTop;
+            console.log(scrollTop);
+            if(scrollTop ==120){
+                document.getElementById("head").style.opacity = "0";
+            }
+        }
+    </script>
 </html>
