--- a/_layouts/Index.html
+++ b/_layouts/Index.html
@@ -1,43 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Index</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
-    <link rel="shortcut icon" type="image/x-icon" href="/peng/favicon.png">
-    <link rel="stylesheet" type="text/css" href="/peng/resource/css/init-css.css">
-    <link rel="stylesheet" type="text/css" href="/peng/resource/css/index.css">
-    <script type="text/javascript" src="/peng/resource/js/fontsize.js"></script>
+	<title>Peng 首页</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" type="image/x-icon" href="/peng/favicon.png">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+	<style type="text/css">
+		body{
+			background: #e8e8e8;
+		}
+		a{
+			text-decoration: none;
+			/*color: white;*/
+		}
+	</style>
 </head>
 <body>
-    <div class="border_container">
-        <div class="header_container" id="head"></div>
-        <div class="middle_container">
-            <div class="left_content">
-                <div class="tags">
-                    <ul>
-                        <li>1</li>
-                        <li>2</li>
-                        <li>3</li>
-                        <li>4</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="center_content">
-                {{content}}
-            </div>
-            <div class="right_content"></div>
-        </div>
-        <div class="foot_container"></div>
-    </div>
+	<div class="mdl-layout mdl-js-layout ">
+		<!-- 头部 -->
+		{% include header.html %}
+		<!-- 内容 -->
+		<main class="mdl-layout__content">
+			<div class="page-content">
+				<!--  -->
+				{{ content }}
+			</div>
+		</main>
+		<!-- 底部 -->
+		{% include footer.html %}
+	</div>
 </body>
-    <script>
-        window.onscroll = function(){
-            var scrollTop = document.documentElement.scrollTop || document.body.scrollTop;
-            console.log(scrollTop);
-            if(scrollTop ==120){
-                document.getElementById("head").style.opacity = "0";
-            }
-        }
-    </script>
 </html>
+
