--- a/_layouts/Index.html
+++ b/_layouts/Index.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="/peng/resource/css/index.css">
+    <script type="text/javascript" src="/peng/resource/js/fontsize.js"></script>
 	<style type="text/css">
 		body{
 			background: #e8e8e8;
