--- a/_layouts/Index.html
+++ b/_layouts/Index.html
@@ -5,9 +5,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" type="image/x-icon" href="/peng/favicon.png">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script> -->
 	<link rel="stylesheet" type="text/css" href="/peng/resource/css/index.css">
     <script type="text/javascript" src="/peng/resource/js/fontsize.js"></script>
 	<style type="text/css">
