--- a/_layouts/Index.html
+++ b/_layouts/Index.html
@@ -17,6 +17,22 @@
 			/*color: white;*/
 		}
 	</style>
+	<style>
+		.demo-card-wide.mdl-card {
+		  /*width: 512px;*/
+		  width:100%;
+		  margin-top: 10px;
+		}
+		.demo-card-wide > .mdl-card__title {
+		  color: #fff;
+		  /*height: 176px;*/
+		  height:200px;
+		  /*background: url('/peng/resource/images/test01.jpg') center / cover;*/
+		}
+		.demo-card-wide > .mdl-card__menu {
+		  color: #fff;
+		}
+	</style>
 </head>
 <body>
 	<div class="mdl-layout mdl-js-layout ">
