--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,16 @@
-<!-- 
+
+<style type="text/css">
+	.mdl-mini-footer{
+		justify-content: center;
+	}	
+</style>
+
 <footer class="mdl-mini-footer">
-  <div class="mdl-mini-footer__left-section">
+  <div class="mdl-mini-footer__right-section">
     <div class="mdl-logo">Peng</div>
     <ul class="mdl-mini-footer__link-list">
       <li><a href="#">Help</a></li>
       <li><a href="#">Privacy & Terms</a></li>
     </ul>
   </div>
-</footer> -->
+</footer>
