--- a/_layouts/Index.html
+++ b/_layouts/Index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" type="image/x-icon" href="/peng/favicon.png">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-blue.min.css" />
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 	<style type="text/css">
 		body{
@@ -21,7 +21,7 @@
 		.demo-card-wide.mdl-card {
 		  /*width: 512px;*/
 		  width:100%;
-		  margin-top: 10px;
+		  /*margin-top: 10px;*/
 		}
 		.demo-card-wide > .mdl-card__title {
 		  color: #fff;
@@ -35,18 +35,15 @@
 	</style>
 </head>
 <body>
-	<div class="mdl-layout mdl-js-layout ">
+	<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header ">
 		<!-- 头部 -->
 		{% include header.html %}
 		<!-- 内容 -->
 		<main class="mdl-layout__content">
-			<div class="page-content">
-				<!--  -->
-				{{ content }}
-			</div>
+			{{ content }}
 		</main>
 		<!-- 底部 -->
-		{% include footer.html %}
+		<!-- {% include footer.html %} -->
 	</div>
 </body>
 </html>
