--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,10 @@
+
+
 <!-- <div class="mdl-layout mdl-js-layout"> -->
-  <header class="mdl-layout__header mdl-layout__header--waterfall">
+  <header class="mdl-layout__header">
     <img class="mdl-layout-icon"></img>
     <div class="mdl-layout__header-row">
-      <span class="mdl-layout__title">Material Design Lite</span>
+      <span class="mdl-layout__title"><a style="color:#fff;" href="/peng/">Peng</a></span>
       <div class="mdl-layout-spacer"></div>
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="#">Hello</a>
@@ -14,7 +16,7 @@
     </div>
   </header>
   <div class="mdl-layout__drawer">
-    <span class="mdl-layout__title">Material Design Lite</span>
+    <span class="mdl-layout__title">Peng</span>
     <nav class="mdl-navigation">
       <a class="mdl-navigation__link" href="#">Hello</a>
       <a class="mdl-navigation__link" href="#">World.</a>
