--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -8,8 +8,8 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-indigo.min.css" />
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-
-	<link rel="stylesheet" href="/peng/assets/main.css">
+	<!-- markdown样式 -->
+	<link rel="stylesheet" href="/peng/resource/css/blog_md.css">
 </head>
 <body>
 	<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
