--- a/_includes/article_header.html
+++ b/_includes/article_header.html
@@ -29,7 +29,7 @@
     <div class="mdl-layout__header-row">
       <span class="mdl-layout__title"><a style="color:#fff;" href="/peng/">Peng</a></span>
       <div class="mdl-layout-spacer">
-        <div class="search" id="search_sty" style="background: #5c6cc0;">
+        <div class="search" id="search_sty" style="background: #1aa9e9;">
             <label class="mdl-button mdl-js-button mdl-button--icon">
               <i class="material-icons" id="search_icon" style="color: #fff;">search</i>
             </label>
@@ -76,7 +76,7 @@
   }
   function blur_search_style(){
     var search_sty = document.getElementById("search_sty");
-    search_sty.style.backgroundColor = "#5c6cc0";
+    search_sty.style.backgroundColor = "#1aa9e9";
 
     var search_icon = document.getElementById("search_icon");
     search_icon.style.color = "#fff";
