--- a/_layouts/Index.html
+++ b/_layouts/Index.html
@@ -41,6 +41,8 @@
 		<!-- 内容 -->
 		<main class="mdl-layout__content">
 			{{ content }}
+			<!-- 底部 -->
+			{% include footer.html %}
 		</main>
 		<!-- 底部 -->
 		<!-- {% include footer.html %} -->
