--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 		<!-- 头部 -->
-		{% include header.html %}
+		{% include article_header.html %}
 		<!-- 内容 -->
 		<main class="mdl-layout__content">
 			
