--- a/_includes/article_header.html
+++ b/_includes/article_header.html
@@ -34,7 +34,7 @@
               <i class="material-icons" id="search_icon" style="color: #fff;">search</i>
             </label>
             <input type="text" class="search_text" id="search_text" style="color:#333;" onfocus="focus_search_style()" onblur="blur_search_style()" placeholder="搜索">
-            <label class="mdl-button mdl-js-button mdl-button--icon">
+            <label class="mdl-button mdl-js-button mdl-button--icon" onclick="clearText()">
               <i class="material-icons" id="clear_icon" style="color:#fff;">clear</i>
             </label>
         </div>
@@ -86,5 +86,12 @@
 
     var search_text = document.getElementById("search_text");
     search_text.style.color = "#ccd1eb";
+  }
+  //清除内容
+  function clearText(){
+    var search_text = document.getElementById("search_text");
+    search_text.value = "";
+    // 获取text焦点
+    search_text.focus();
   }
 </script>
