--- a/resource/css/blog_md.css
+++ b/resource/css/blog_md.css
@@ -60,8 +60,35 @@ li > ol {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-  font-weight: 400; }
-
+  font-weight: bold; 
+  margin-top: 15px;
+  margin-bottom: 0px;
+}
+h1{
+  font-size: 28px;
+  line-height: 32px;
+  font-weight: 400;
+}
+h2{
+  font-size: 24px;
+  line-height: 28px;
+}
+h3{
+  font-size: 18px;
+  line-height: 24px;
+}
+h4{
+  font-size: 16px;
+  line-height: 24px;
+}
+h5{
+  font-size: 14px;
+  line-height: 18px;
+}
+h6{
+  font-size: 12px;
+  line-height: 16px;
+}
 /**
  * Links
  */
