--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
             <label class="mdl-button mdl-js-button mdl-button--icon">
               <i class="material-icons" id="search_icon" style="color: #fff;">search</i>
             </label>
-            <input type="text" class="search_text" id="search_text" style="color:#333;" onfocus="focus_search_style()" onblur="blur_search_style()" placeholder="搜索">
+            <input type="text" class="search_text" id="search_text" style="color:#333;" onfocus="focus_search_style()" onblur="blur_search_style()" placeholder="搜索test">
             <label class="mdl-button mdl-js-button mdl-button--icon" onclick="clearText()">
               <i class="material-icons" id="clear_icon" style="color:#fff;">clear</i>
             </label>
