--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,99 +1,3 @@
-
-<style type="text/css">
-  ::-webkit-input-placeholder{
-    color: #ccd1eb;
-  }
-  .mdl-layout-spacer .search{
-    transition: 0.5s;
-    border-radius: 5px;
-    height:32px;
-    padding: 6px;
-    margin-left: 48px;
-    display: flex;
-  }
-  .mdl-layout-spacer .search .search_text{
-    background: transparent;
-    outline: none;
-    border:none;
-    width: 100%;
-    height:30px;
-    margin-left: 8px;
-    padding-left: 12px; 
-    font-size: 14px;
-  }
-</style>
-
-<!-- <div class="mdl-layout mdl-js-layout"> -->
-  <header class="mdl-layout__header">
-    <img class="mdl-layout-icon"></img>
-    <div class="mdl-layout__header-row">
-      <span class="mdl-layout__title"><a style="color:#fff;" href="/peng/">Peng</a></span>
-      <div class="mdl-layout-spacer">
-        <div class="search" id="search_sty" style="background: #5c6cc0;">
-            <label class="mdl-button mdl-js-button mdl-button--icon">
-              <i class="material-icons" id="search_icon" style="color: #fff;">search</i>
-            </label>
-            <input type="text" class="search_text" id="search_text" style="color:#333;" onfocus="focus_search_style()" onblur="blur_search_style()" placeholder="搜索">
-            <label class="mdl-button mdl-js-button mdl-button--icon" onclick="clearText()">
-              <i class="material-icons" id="clear_icon" style="color:#fff;">clear</i>
-            </label>
-        </div>
-      </div>
-      <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" href="#">Hello</a>
-        <a class="mdl-navigation__link" href="#">World.</a>
-        <a class="mdl-navigation__link" href="#">How</a>
-        <a class="mdl-navigation__link" href="#">Are</a>
-        <a class="mdl-navigation__link" href="#">You?</a>
-      </nav>
-    </div>
-  </header>
-  <div class="mdl-layout__drawer">
-    <span class="mdl-layout__title">Peng</span>
-    <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="#">Hello</a>
-      <a class="mdl-navigation__link" href="#">World.</a>
-      <a class="mdl-navigation__link" href="#">How</a>
-      <a class="mdl-navigation__link" href="#">Are</a>
-      <a class="mdl-navigation__link" href="#">You?</a>
-    </nav>
-  </div>
-<!-- </div> -->
-
-<script type="text/javascript">
-  //获得焦点
-  function focus_search_style(){
-    var search_sty = document.getElementById("search_sty");
-    search_sty.style.backgroundColor = "#fff";
-
-    var search_icon = document.getElementById("search_icon");
-    search_icon.style.color = "rgba(0, 0, 0, 0.54)";
-
-    var clear_icon = document.getElementById("clear_icon");
-    clear_icon.style.color = "rgba(0, 0, 0, 0.54)";
-
-    var search_text = document.getElementById("search_text");
-    search_text.style.color = "#333";
-  }
-  //失去焦点
-  function blur_search_style(){
-    var search_sty = document.getElementById("search_sty");
-    search_sty.style.backgroundColor = "#5c6cc0";
-
-    var search_icon = document.getElementById("search_icon");
-    search_icon.style.color = "#fff";
-
-    var clear_icon = document.getElementById("clear_icon");
-    clear_icon.style.color = "#fff";
-
-    var search_text = document.getElementById("search_text");
-    search_text.style.color = "#ccd1eb";
-  }
-  //清除内容
-  function clearText(){
-    var search_text = document.getElementById("search_text");
-    search_text.value = "";
-    // 获取text焦点
-    search_text.focus();
-  }
-</script>
+<div>
+  pc
+</div>
