--- a/_layouts/Index.html
+++ b/_layouts/Index.html
@@ -5,47 +5,20 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" type="image/x-icon" href="/peng/favicon.png">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-blue.min.css" />
-	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-	<style type="text/css">
-		body{
-			background: #e8e8e8;
-		}
-		a{
-			text-decoration: none;
-			/*color: white;*/
-		}
-	</style>
-	<style>
-		.demo-card-wide.mdl-card {
-		  /*width: 512px;*/
-		  width:100%;
-		  /*margin-top: 10px;*/
-		}
-		.demo-card-wide > .mdl-card__title {
-		  color: #fff;
-		  /*height: 176px;*/
-		  height:200px;
-		  /*background: url('/peng/resource/images/test01.jpg') center / cover;*/
-		}
-		.demo-card-wide > .mdl-card__menu {
-		  color: #fff;
-		}
-	</style>
+	<link rel="stylesheet" href="/peng/resource/css/main.css">
 </head>
 <body>
-	<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header ">
+	<div class="container">
 		<!-- 头部 -->
-		{% include header.html %}
+		<sidebar>
+			{% include header.html %}
+		</sidebar>
 		<!-- 内容 -->
-		<main class="mdl-layout__content">
+		<blogBox>
 			{{ content }}
-			<!-- 底部 -->
-			{% include footer.html %}
-		</main>
+		</blogBox>
 		<!-- 底部 -->
-		<!-- {% include footer.html %} -->
+		<!--{% include footer.html %}-->
 	</div>
 </body>
 </html>
