--- a/_layouts/Index.html
+++ b/_layouts/Index.html
@@ -10,11 +10,11 @@
 <body>
 	<div class="container">
 		<!-- 头部 -->
-		<sidebar>
+		<sidebar class="sidebar">
 			{% include header.html %}
 		</sidebar>
 		<!-- 内容 -->
-		<blogBox>
+		<blogBox class="blogBox">
 			{{ content }}
 		</blogBox>
 		<!-- 底部 -->
