--- a/resource/less/main.less
+++ b/resource/less/main.less
@@ -4,13 +4,16 @@ body{
   margin: 0;
   padding: 0;
   list-style: none;
+  font-family: 'Lato', sans-serif;
+  color: #515151;
+  background-color: #fbfbfb;
 }
 .container{
   display: flex;
   justify-content: space-between;
   position: relative;
   max-width: 1250px;
-  sidebar{
+  .sidebar{
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
@@ -21,28 +24,74 @@ body{
     width: 240px;
     height: 100%;
     padding: 20px 10px;
-    background-color: #eee;
-    opacity:0.5;
+    background-color: #fff;
+    //opacity:0.5;
   }
-  blogBox{
+  .blogBox{
     padding: 20px 20px 20px 260px;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    align-items: stretch;
-    background: bisque;
-    article{
+    justify-content: center;
+    //align-items: center;
+    width: 100%;
+    //background: bisque;
+    .article{
       display: flex;
       justify-content: space-between;
+      max-width: 970px;
       border-radius: 10px;
-      background: red;
-      .post-thumbnail{
-        width: 300px;
-        height: 180px;
+      margin-bottom: 24px;
+      background: #fff;
+      transition: all .3s ease;
+      box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
+      overflow: hidden;
+      .article-img{
+        width: 30%;
+        height: 176px;
         background-size: cover;
         background-position: 50% 50%;
-        border-radius: 10px;
+        //border-radius: 10px;
+      }
+      .article-content{
+        width:70%;
+        //height:100%;
+        box-sizing: border-box;
+        padding: 16px;
+      }
+    }
+    .article:hover{
+      transform: translate(0px, -2px);
+      box-shadow: 0 15px 45px -10px rgba(10, 16, 34, 0.2);
+    }
+  }
+}
+
+
+/**********************************************************/
+/* Medium Devices, Desktops */
+@media only screen and (max-width: 992px) {
+  .container{
+    .sidebar{
+
+    }
+    .blogBox{
+      flex-direction: row;
+      flex-wrap: wrap;
+      .article {
+        width: 48%;
+        max-width: 100%;
+        margin: 0 0.9% 1.5%;
+        flex-direction: column;
+        .article-img{
+          width:100%;
+          height:176px;
+        }
+        .article-content{
+          width:100%;
+          height:auto;
+        }
       }
     }
   }
+
 }
