--- a/resource/less/main.less
+++ b/resource/less/main.less
@@ -93,5 +93,68 @@ body{
       }
     }
   }
+}
+/* Small Devices, Tablets */
+@media only screen and (max-width: 768px) {
+  .container{
+    flex-direction: column;
+    .sidebar{
+      position: relative;
+      width:100%;
+      padding: 10px;
+      box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
+    }
+    .blogBox{
+      flex-direction: row;
+      flex-wrap: wrap;
+      box-sizing: border-box;
+      padding: 20px 10px;
+      .article {
+        width: 48%;
+        max-width: 100%;
+        margin: 0 0.9% 1.5%;
+        flex-direction: column;
+        .article-img{
+          width:100%;
+          height:176px;
+        }
+        .article-content{
+          width:100%;
+          height:auto;
+        }
+      }
+    }
+  }
+}
 
+/* Extra Small Devices, Phones */
+@media only screen and (max-width: 480px) {
+  .container{
+    flex-direction: column;
+    .sidebar{
+      position: relative;
+      width:100%;
+      padding: 10px;
+      box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
+    }
+    .blogBox{
+      flex-direction: column;
+      //flex-wrap: wrap;
+      box-sizing: border-box;
+      padding: 20px 10px;
+      .article {
+        width: 100%;
+        margin: 0 0.9% 1.5%;
+        flex-direction: column;
+        .article-img{
+          width:100%;
+          height:176px;
+        }
+        .article-content{
+          width:100%;
+          height:auto;
+        }
+      }
+    }
+  }
 }
