--- a/resource/less/main.less
+++ b/resource/less/main.less
@@ -80,7 +80,7 @@ body{
       .article {
         width: 48%;
         max-width: 100%;
-        margin: 0 0.9% 1.5%;
+        margin: 0 0.9% 2%;
         flex-direction: column;
         .article-img{
           width:100%;
@@ -112,7 +112,7 @@ body{
       .article {
         width: 48%;
         max-width: 100%;
-        margin: 0 0.9% 1.5%;
+        margin: 0 0.9% 2%;
         flex-direction: column;
         .article-img{
           width:100%;
@@ -143,8 +143,9 @@ body{
       box-sizing: border-box;
       padding: 20px 10px;
       .article {
-        width: 100%;
-        margin: 0 0.9% 1.5%;
+        width:98%;
+        max-width: 100%;
+        margin: 0 0.9% 4%;
         flex-direction: column;
         .article-img{
           width:100%;
