--- a/resource/css/main.css
+++ b/resource/css/main.css
@@ -97,7 +97,7 @@ body {
   .container .blogBox .article {
     width: 48%;
     max-width: 100%;
-    margin: 0 0.9% 1.5%;
+    margin: 0 0.9% 2%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -141,7 +141,7 @@ body {
   .container .blogBox .article {
     width: 48%;
     max-width: 100%;
-    margin: 0 0.9% 1.5%;
+    margin: 0 0.9% 2%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -181,8 +181,9 @@ body {
     padding: 20px 10px;
   }
   .container .blogBox .article {
-    width: 100%;
-    margin: 0 0.9% 1.5%;
+    width: 98%;
+    max-width: 100%;
+    margin: 0 0.9% 4%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
