--- a/_layouts/Index.html
+++ b/_layouts/Index.html
@@ -11,7 +11,7 @@
 	<div class="container">
 		<!-- 头部 -->
 		<sidebar class="sidebar">
-			{% include header.html %}
+			{% include sidebar.html %}
 		</sidebar>
 		<!-- 内容 -->
 		<blogBox class="blogBox">
