--- a/resource/css/main.css
+++ b/resource/css/main.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   list-style: none;
   font-family: 'Lato', sans-serif;
+  font-size: 14px;
   color: #515151;
   background-color: #fbfbfb;
 }
@@ -22,6 +23,10 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -33,6 +38,83 @@ body {
   height: 100%;
   padding: 20px 10px;
   background-color: #fff;
+}
+.container .sidebar header .about {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.container .sidebar header .about .cover-author-image {
+  width: 100px;
+  height: 100px;
+  margin-bottom: 10px;
+  background-color: transparent;
+}
+.container .sidebar header .about .cover-author-image a {
+  display: block;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.container .sidebar header .about .cover-author-image img {
+  width: 100px;
+  height: 100px;
+  border-radius: 100px;
+}
+.container .sidebar header .about .author-name {
+  margin: 0 0 10px;
+  position: relative;
+  text-transform: uppercase;
+  color: #333030;
+  font-weight: 700;
+}
+.container .sidebar header .about p {
+  margin: 0 0 10px;
+}
+.container .sidebar footer .contact .contact-title {
+  position: relative;
+  color: #333030;
+  font-weight: 400;
+  font-size: 12px;
+  margin: 0 0 5px;
+  text-transform: uppercase;
+  text-align: center;
+}
+.container .sidebar footer .contact .contact-title::before {
+  content: "";
+  display: block;
+  height: 2px;
+  width: calc(50% - 48px);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  position: absolute;
+  top: 50%;
+  left: 0;
+  background-color: #515151;
+}
+.container .sidebar footer .contact .contact-title::after {
+  content: "";
+  display: block;
+  height: 2px;
+  width: calc(50% - 48px);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  position: absolute;
+  top: 50%;
+  right: 0;
+  background-color: #515151;
+}
+.container .sidebar footer .copyright {
+  text-align: center;
 }
 .container .blogBox {
   padding: 20px 20px 20px 260px;
@@ -52,9 +134,6 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   max-width: 970px;
   border-radius: 10px;
   margin-bottom: 24px;
@@ -76,6 +155,25 @@ body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   padding: 16px;
+}
+.container .blogBox .article .article-content .article-title {
+  margin: 0 0 10px;
+  font-size: 30px;
+  line-height: 1.5;
+  font-weight: 600;
+}
+.container .blogBox .article .article-content .article-title a {
+  font-family: 'PT Serif', serif;
+  text-decoration: none;
+  color: #263959;
+}
+.container .blogBox .article .article-content p {
+  margin-top: 0;
+  line-height: 24px;
+  color: #666;
+}
+.container .blogBox .article .article-content span {
+  font-size: 12px;
 }
 .container .blogBox .article:hover {
   -webkit-transform: translate(0px, -2px);
@@ -110,6 +208,12 @@ body {
   .container .blogBox .article .article-content {
     width: 100%;
     height: auto;
+  }
+  .container .blogBox .article .article-content .article-title {
+    margin: 0 0 5px;
+  }
+  .container .blogBox .article .article-content .article-title a {
+    font-size: 21px;
   }
 }
 /* Small Devices, Tablets */
