--- a/resource/less/main.less
+++ b/resource/less/main.less
@@ -5,6 +5,7 @@ body{
   padding: 0;
   list-style: none;
   font-family: 'Lato', sans-serif;
+  font-size: 14px;
   color: #515151;
   background-color: #fbfbfb;
 }
@@ -16,6 +17,7 @@ body{
   .sidebar{
     box-sizing: border-box;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     position: fixed;
     top: 0;
@@ -26,6 +28,77 @@ body{
     padding: 20px 10px;
     background-color: #fff;
     //opacity:0.5;
+    header{
+      .about{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        .cover-author-image{
+          width: 100px;
+          height: 100px;
+          margin-bottom: 10px;
+          background-color: transparent;
+          a{
+            display: block;
+            box-sizing: border-box;
+          }
+          img{
+            width:100px;
+            height:100px;
+            border-radius: 100px;
+          }
+        }
+        .author-name{
+          margin: 0 0 10px;
+          position: relative;
+          text-transform: uppercase;
+          color: #333030;
+          font-weight: 700;
+        }
+        p{
+          margin: 0 0 10px;
+        }
+      }
+    }
+    footer{
+      .contact{
+        .contact-title{
+          position: relative;
+          color: #333030;
+          font-weight: 400;
+          font-size: 12px;
+          margin: 0 0 5px;
+          text-transform: uppercase;
+          text-align: center;
+        }
+        .contact-title::before{
+          content: "";
+          display: block;
+          height: 2px;
+          width: calc(~"50% - 48px");
+          transform: translateY(-50%);
+          position: absolute;
+          top: 50%;
+          left: 0;
+          background-color: #515151;
+        }
+        .contact-title::after{
+          content: "";
+          display: block;
+          height: 2px;
+          width: calc(~"50% - 48px");
+          transform: translateY(-50%);
+          position: absolute;
+          top: 50%;
+          right: 0;
+          background-color: #515151;
+        }
+      }
+      .copyright{
+        text-align: center;
+      }
+    }
   }
   .blogBox{
     padding: 20px 20px 20px 260px;
@@ -37,7 +110,7 @@ body{
     //background: bisque;
     .article{
       display: flex;
-      justify-content: space-between;
+      //justify-content: space-between;
       max-width: 970px;
       border-radius: 10px;
       margin-bottom: 24px;
@@ -57,6 +130,25 @@ body{
         //height:100%;
         box-sizing: border-box;
         padding: 16px;
+        .article-title{
+          margin: 0 0 10px;
+          font-size: 30px;
+          line-height: 1.5;
+          font-weight: 600;
+          a{
+            font-family: 'PT Serif', serif;
+            text-decoration: none;
+            color: #263959;
+          }
+        }
+        p{
+          margin-top: 0;
+          line-height: 24px;
+          color:#666;
+        }
+        span{
+          font-size: 12px;
+        }
       }
     }
     .article:hover{
@@ -89,6 +181,12 @@ body{
         .article-content{
           width:100%;
           height:auto;
+          .article-title{
+            margin: 0 0 5px;
+            a{
+              font-size: 21px;
+            }
+          }
         }
       }
     }
