--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,11 +16,9 @@
   <footer>
     <section class="contact">
       <h3 class="contact-title">Contact me</h3>
-      <ul>
-        <li class="github"><a href="http://github.com/artemsheludko" target="_blank"><i class="fa fa-github"></i></a></li>
-        <li class="linkedin"><a href="https://in.linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-        <li class="email"><a href="mailto:example.david@blog.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
-      </ul>
+      <div class="icon-group">
+        <a href="#"><img src="/peng/resource/images/github.png" alt="github"></a>
+      </div>
     </section> <!-- End Section Contact -->
     <div class="copyright">
       <p>2017 © Peng Chen</p>
