--- a/resource/less/main.less
+++ b/resource/less/main.less
@@ -94,6 +94,14 @@ body{
           right: 0;
           background-color: #515151;
         }
+        .icon-group{
+          display: flex;
+          justify-content: center;
+          img{
+            width:32px;
+            height:32px;
+          }
+        }
       }
       .copyright{
         text-align: center;
