--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,7 +17,8 @@
     <section class="contact">
       <h3 class="contact-title">Contact me</h3>
       <div class="icon-group">
-        <a href="#"><img src="/peng/resource/images/github.png" alt="github"></a>
+        <a href="https://github.com/PengChen96"><img src="/peng/resource/images/github.png" alt="github"></a>
+        <a href="https://juejin.im/user/58c39cfe44d9040069841629"><img src="/peng/resource/images/juejin.png" alt="github"></a>
       </div>
     </section> <!-- End Section Contact -->
     <div class="copyright">
