--- a/resource/less/main.less
+++ b/resource/less/main.less
@@ -97,9 +97,18 @@ body{
         .icon-group{
           display: flex;
           justify-content: center;
+          padding: 8px 0 0;
           img{
-            width:32px;
-            height:32px;
+            width:24px;
+            height:24px;
+            padding: 0 6px;
+            transition: all 0.3s ease;
+            filter: grayscale(100%);
+            opacity: 0.66;
+          }
+          img:hover{
+            filter: grayscale(0%);
+            opacity: 1;
           }
         }
       }
@@ -209,6 +218,16 @@ body{
       width:100%;
       padding: 10px;
       box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
+      footer{
+        .contact{
+          .contact-title{
+            display: none;
+          }
+        }
+        .copyright{
+          display: none;
+        }
+      }
     }
     .blogBox{
       flex-direction: row;
