--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,7 +21,7 @@
         <a href="https://juejin.im/user/58c39cfe44d9040069841629"><img src="/peng/resource/images/juejin.png" alt="github"></a>
       </div>
     </section> <!-- End Section Contact -->
-    <div class="copyright">
+    <div class="copy-right">
       <p>2017 © Peng Chen</p>
     </div>
   </footer> <!-- End Footer -->
