--- a/resource/css/main.css
+++ b/resource/css/main.css
@@ -92,6 +92,7 @@ body {
   color: #333030;
   font-weight: 400;
   font-size: 12px;
+  line-height: 24px;
   margin: 0 0 5px;
   text-transform: uppercase;
   text-align: center;
@@ -134,6 +135,7 @@ body {
   padding: 8px 0 0;
 }
 .container .sidebar footer .contact .icon-group img {
+  display: block;
   width: 24px;
   height: 24px;
   padding: 0 6px;
@@ -148,8 +150,12 @@ body {
           filter: grayscale(0%);
   opacity: 1;
 }
-.container .sidebar footer .copyright {
+.container .sidebar footer .copy-right {
   text-align: center;
+}
+.container .sidebar footer .copy-right p {
+  line-height: 20px;
+  margin: 16px 0;
 }
 .container .blogBox {
   padding: 20px 20px 20px 260px;
@@ -168,7 +174,18 @@ body {
           justify-content: center;
   width: 100%;
 }
-.container .blogBox .article {
+.container .blogBox .articleBox {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.container .blogBox .articleBox .article {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -182,46 +199,91 @@ body {
   box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
   overflow: hidden;
 }
-.container .blogBox .article .article-img {
+.container .blogBox .articleBox .article .article-img {
   width: 30%;
   height: 176px;
   background-size: cover;
   background-position: 50% 50%;
 }
-.container .blogBox .article .article-content {
+.container .blogBox .articleBox .article .article-content {
   width: 70%;
   box-sizing: border-box;
   padding: 16px;
 }
-.container .blogBox .article .article-content .article-title {
+.container .blogBox .articleBox .article .article-content .article-title {
   margin: 0 0 10px;
   font-size: 30px;
   line-height: 1.5;
   font-weight: 600;
 }
-.container .blogBox .article .article-content .article-title a {
+.container .blogBox .articleBox .article .article-content .article-title a {
   font-family: 'PT Serif', serif;
   text-decoration: none;
   color: #263959;
 }
-.container .blogBox .article .article-content p {
+.container .blogBox .articleBox .article .article-content p {
   margin-top: 0;
   line-height: 24px;
   color: #666;
 }
-.container .blogBox .article .article-content span {
+.container .blogBox .articleBox .article .article-content span {
   font-size: 12px;
 }
-.container .blogBox .article:hover {
+.container .blogBox .articleBox .article:hover {
   -webkit-transform: translate(0px, -2px);
       -ms-transform: translate(0px, -2px);
           transform: translate(0px, -2px);
   box-shadow: 0 15px 45px -10px rgba(10, 16, 34, 0.2);
 }
+.container .blogBox .paginationBox {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 100%;
+}
+.container .blogBox .paginationBox .pageNum {
+  width: 24px;
+  height: 24px;
+  margin-right: 4px;
+  text-align: center;
+  line-height: 24px;
+  border: 1px solid #ccc;
+  background: #eee;
+}
+.container .blogBox .paginationBox .pageNum a {
+  display: block;
+  text-decoration: none;
+  color: #333;
+}
+.container .blogBox .paginationBox .active a {
+  color: #fff;
+  background: #3385ff;
+  border: 1px solid #2d78f4;
+}
+.container .blogBox .contentBox {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
 /**********************************************************/
 /* Medium Devices, Desktops */
 @media only screen and (max-width: 992px) {
-  .container .blogBox {
+  .container .blogBox .articleBox {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -webkit-flex-direction: row;
@@ -231,7 +293,7 @@ body {
         -ms-flex-wrap: wrap;
             flex-wrap: wrap;
   }
-  .container .blogBox .article {
+  .container .blogBox .articleBox .article {
     width: 48%;
     max-width: 100%;
     margin: 0 0.9% 2%;
@@ -241,18 +303,18 @@ body {
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  .container .blogBox .article .article-img {
+  .container .blogBox .articleBox .article .article-img {
     width: 100%;
     height: 176px;
   }
-  .container .blogBox .article .article-content {
+  .container .blogBox .articleBox .article .article-content {
     width: 100%;
     height: auto;
   }
-  .container .blogBox .article .article-content .article-title {
+  .container .blogBox .articleBox .article .article-content .article-title {
     margin: 0 0 5px;
   }
-  .container .blogBox .article .article-content .article-title a {
+  .container .blogBox .articleBox .article .article-content .article-title a {
     font-size: 21px;
   }
 }
@@ -289,7 +351,18 @@ body {
     box-sizing: border-box;
     padding: 20px 10px;
   }
-  .container .blogBox .article {
+  .container .blogBox .articleBox {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .container .blogBox .articleBox .article {
     width: 48%;
     max-width: 100%;
     margin: 0 0.9% 2%;
@@ -299,11 +372,11 @@ body {
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  .container .blogBox .article .article-img {
+  .container .blogBox .articleBox .article .article-img {
     width: 100%;
     height: 176px;
   }
-  .container .blogBox .article .article-content {
+  .container .blogBox .articleBox .article .article-content {
     width: 100%;
     height: auto;
   }
@@ -332,7 +405,7 @@ body {
     box-sizing: border-box;
     padding: 20px 10px;
   }
-  .container .blogBox .article {
+  .container .blogBox .articleBox .article {
     width: 98%;
     max-width: 100%;
     margin: 0 0.9% 4%;
@@ -342,11 +415,11 @@ body {
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  .container .blogBox .article .article-img {
+  .container .blogBox .articleBox .article .article-img {
     width: 100%;
     height: 176px;
   }
-  .container .blogBox .article .article-content {
+  .container .blogBox .articleBox .article .article-content {
     width: 100%;
     height: auto;
   }
