--- a/resource/less/main.less
+++ b/resource/less/main.less
@@ -68,6 +68,7 @@ body{
           color: #333030;
           font-weight: 400;
           font-size: 12px;
+          line-height:24px;
           margin: 0 0 5px;
           text-transform: uppercase;
           text-align: center;
@@ -99,6 +100,7 @@ body{
           justify-content: center;
           padding: 8px 0 0;
           img{
+            display: block;
             width:24px;
             height:24px;
             padding: 0 6px;
@@ -112,8 +114,12 @@ body{
           }
         }
       }
-      .copyright{
+      .copy-right{
         text-align: center;
+        p{
+          line-height:20px;
+          margin: 16px 0;
+        }
       }
     }
   }
@@ -125,52 +131,87 @@ body{
     //align-items: center;
     width: 100%;
     //background: bisque;
-    .article{
+    .articleBox{
       display: flex;
-      //justify-content: space-between;
-      max-width: 970px;
-      border-radius: 10px;
-      margin-bottom: 24px;
-      background: #fff;
-      transition: all .3s ease;
-      box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
-      overflow: hidden;
-      .article-img{
-        width: 30%;
-        height: 176px;
-        background-size: cover;
-        background-position: 50% 50%;
-        //border-radius: 10px;
-      }
-      .article-content{
-        width:70%;
-        //height:100%;
-        box-sizing: border-box;
-        padding: 16px;
-        .article-title{
-          margin: 0 0 10px;
-          font-size: 30px;
-          line-height: 1.5;
-          font-weight: 600;
-          a{
-            font-family: 'PT Serif', serif;
-            text-decoration: none;
-            color: #263959;
+      flex-direction: column;
+      .article{
+        display: flex;
+        //justify-content: space-between;
+        max-width: 970px;
+        border-radius: 10px;
+        margin-bottom: 24px;
+        background: #fff;
+        transition: all .3s ease;
+        box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
+        overflow: hidden;
+        .article-img{
+          width: 30%;
+          height: 176px;
+          background-size: cover;
+          background-position: 50% 50%;
+          //border-radius: 10px;
+        }
+        .article-content{
+          width:70%;
+          //height:100%;
+          box-sizing: border-box;
+          padding: 16px;
+          .article-title{
+            margin: 0 0 10px;
+            font-size: 30px;
+            line-height: 1.5;
+            font-weight: 600;
+            a{
+              font-family: 'PT Serif', serif;
+              text-decoration: none;
+              color: #263959;
+            }
+          }
+          p{
+            margin-top: 0;
+            line-height: 24px;
+            color:#666;
+          }
+          span{
+            font-size: 12px;
           }
         }
-        p{
-          margin-top: 0;
-          line-height: 24px;
-          color:#666;
+      }
+      .article:hover{
+        transform: translate(0px, -2px);
+        box-shadow: 0 15px 45px -10px rgba(10, 16, 34, 0.2);
+      }
+    }
+    .paginationBox{
+      display: flex;
+      justify-content: flex-start;
+      width:100%;
+      .pageNum{
+        width:24px;
+        height:24px;
+        margin-right: 4px;
+        text-align: center;
+        line-height: 24px;
+        border:1px solid #ccc;
+        background: #eee;
+        a{
+          display: block;
+          text-decoration: none;
+          color:#333;
         }
-        span{
-          font-size: 12px;
+      }
+      .active{
+        a{
+          color: #fff;
+          background: #3385ff;
+          border: 1px solid #2d78f4;
         }
       }
     }
-    .article:hover{
-      transform: translate(0px, -2px);
-      box-shadow: 0 15px 45px -10px rgba(10, 16, 34, 0.2);
+    // 文章内容样式
+    .contentBox{
+      display: flex;
+      flex-direction: column;
     }
   }
 }
@@ -184,24 +225,29 @@ body{
 
     }
     .blogBox{
-      flex-direction: row;
-      flex-wrap: wrap;
-      .article {
-        width: 48%;
-        max-width: 100%;
-        margin: 0 0.9% 2%;
-        flex-direction: column;
-        .article-img{
-          width:100%;
-          height:176px;
-        }
-        .article-content{
-          width:100%;
-          height:auto;
-          .article-title{
-            margin: 0 0 5px;
-            a{
-              font-size: 21px;
+      //flex-direction: row;
+      //flex-wrap: wrap;
+      .articleBox {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        .article {
+          width: 48%;
+          max-width: 100%;
+          margin: 0 0.9% 2%;
+          flex-direction: column;
+          .article-img {
+            width: 100%;
+            height: 176px;
+          }
+          .article-content {
+            width: 100%;
+            height: auto;
+            .article-title {
+              margin: 0 0 5px;
+              a {
+                font-size: 21px;
+              }
             }
           }
         }
@@ -234,18 +280,22 @@ body{
       flex-wrap: wrap;
       box-sizing: border-box;
       padding: 20px 10px;
-      .article {
-        width: 48%;
-        max-width: 100%;
-        margin: 0 0.9% 2%;
-        flex-direction: column;
-        .article-img{
-          width:100%;
-          height:176px;
-        }
-        .article-content{
-          width:100%;
-          height:auto;
+      .articleBox{
+        display: flex;
+        flex-direction: row;
+        .article {
+          width: 48%;
+          max-width: 100%;
+          margin: 0 0.9% 2%;
+          flex-direction: column;
+          .article-img{
+            width:100%;
+            height:176px;
+          }
+          .article-content{
+            width:100%;
+            height:auto;
+          }
         }
       }
     }
@@ -267,18 +317,20 @@ body{
       //flex-wrap: wrap;
       box-sizing: border-box;
       padding: 20px 10px;
-      .article {
-        width:98%;
-        max-width: 100%;
-        margin: 0 0.9% 4%;
-        flex-direction: column;
-        .article-img{
-          width:100%;
-          height:176px;
-        }
-        .article-content{
-          width:100%;
-          height:auto;
+      .articleBox{
+        .article {
+          width:98%;
+          max-width: 100%;
+          margin: 0 0.9% 4%;
+          flex-direction: column;
+          .article-img{
+            width:100%;
+            height:176px;
+          }
+          .article-content{
+            width:100%;
+            height:auto;
+          }
         }
       }
     }
