--- a/resource/less/main.less
+++ b/resource/less/main.less
@@ -187,24 +187,30 @@ body{
       justify-content: flex-start;
       width:100%;
       .pageNum{
-        width:24px;
-        height:24px;
-        margin-right: 4px;
+        width:28px;
+        height:28px;
+        margin-right: 8px;
         text-align: center;
-        line-height: 24px;
-        border:1px solid #ccc;
-        background: #eee;
+        line-height: 28px;
+        border-radius: 4px;
+        background: #ccc;
         a{
           display: block;
           text-decoration: none;
           color:#333;
+          border-radius: 4px;
+        }
+        a:hover{
+          color: #fff;
+          background: #3385ff;
+          box-shadow: 1px 1px 10px 0 #333;
         }
       }
       .active{
         a{
           color: #fff;
           background: #3385ff;
-          border: 1px solid #2d78f4;
+          box-shadow: 1px 1px 10px 0 #333;
         }
       }
     }
