--- a/resource/less/main.less
+++ b/resource/less/main.less
@@ -124,6 +124,7 @@ body{
     }
   }
   .blogBox{
+    box-sizing: border-box;
     padding: 20px 20px 20px 260px;
     display: flex;
     flex-direction: column;
@@ -218,6 +219,7 @@ body{
     .contentBox{
       display: flex;
       flex-direction: column;
+      width: 100%;
     }
   }
 }
