--- a/resource/css/main.css
+++ b/resource/css/main.css
@@ -9,29 +9,25 @@ body {
 }
 .container {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
   position: relative;
   max-width: 1250px;
 }
 .container .sidebar {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
   -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
   position: fixed;
@@ -45,20 +41,16 @@ body {
 }
 .container .sidebar header .about {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
   -webkit-box-pack: center;
-  -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
-  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
 }
@@ -70,7 +62,8 @@ body {
 }
 .container .sidebar header .about .cover-author-image a {
   display: block;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 .container .sidebar header .about .cover-author-image img {
   width: 100px;
@@ -103,7 +96,6 @@ body {
   height: 2px;
   width: calc(50% - 48px);
   -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
           transform: translateY(-50%);
   position: absolute;
   top: 50%;
@@ -116,7 +108,6 @@ body {
   height: 2px;
   width: calc(50% - 48px);
   -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
           transform: translateY(-50%);
   position: absolute;
   top: 50%;
@@ -125,11 +116,9 @@ body {
 }
 .container .sidebar footer .contact .icon-group {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
   padding: 8px 0 0;
@@ -140,7 +129,7 @@ body {
   height: 24px;
   padding: 0 6px;
   -webkit-transition: all 0.3s ease;
-          transition: all 0.3s ease;
+  transition: all 0.3s ease;
   -webkit-filter: grayscale(100%);
           filter: grayscale(100%);
   opacity: 0.66;
@@ -158,36 +147,32 @@ body {
   margin: 16px 0;
 }
 .container .blogBox {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 20px 20px 20px 260px;
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
   -webkit-box-pack: center;
-  -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
   width: 100%;
 }
 .container .blogBox .articleBox {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
 }
 .container .blogBox .articleBox .article {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   max-width: 970px;
@@ -195,8 +180,9 @@ body {
   margin-bottom: 24px;
   background: #fff;
   -webkit-transition: all .3s ease;
-          transition: all .3s ease;
-  box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
+  transition: all .3s ease;
+  -webkit-box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
+          box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
   overflow: hidden;
 }
 .container .blogBox .articleBox .article .article-img {
@@ -207,7 +193,8 @@ body {
 }
 .container .blogBox .articleBox .article .article-content {
   width: 70%;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 16px;
 }
 .container .blogBox .articleBox .article .article-content .article-title {
@@ -231,17 +218,15 @@ body {
 }
 .container .blogBox .articleBox .article:hover {
   -webkit-transform: translate(0px, -2px);
-      -ms-transform: translate(0px, -2px);
           transform: translate(0px, -2px);
-  box-shadow: 0 15px 45px -10px rgba(10, 16, 34, 0.2);
+  -webkit-box-shadow: 0 15px 45px -10px rgba(10, 16, 34, 0.2);
+          box-shadow: 0 15px 45px -10px rgba(10, 16, 34, 0.2);
 }
 .container .blogBox .paginationBox {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: start;
-  -webkit-justify-content: flex-start;
       -ms-flex-pack: start;
           justify-content: flex-start;
   width: 100%;
@@ -264,40 +249,38 @@ body {
 .container .blogBox .paginationBox .pageNum a:hover {
   color: #fff;
   background: #3385ff;
-  box-shadow: 1px 1px 10px 0 #333;
+  -webkit-box-shadow: 1px 1px 10px 0 #333;
+          box-shadow: 1px 1px 10px 0 #333;
 }
 .container .blogBox .paginationBox .active a {
   color: #fff;
   background: #3385ff;
-  box-shadow: 1px 1px 10px 0 #333;
+  -webkit-box-shadow: 1px 1px 10px 0 #333;
+          box-shadow: 1px 1px 10px 0 #333;
 }
 .container .blogBox .contentBox {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
+  width: 100%;
 }
 /**********************************************************/
 /* Medium Devices, Desktops */
 @media only screen and (max-width: 992px) {
   .container .blogBox .articleBox {
     display: -webkit-box;
-    display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
         -ms-flex-direction: row;
             flex-direction: row;
-    -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
   .container .blogBox .articleBox .article {
     width: 48%;
@@ -305,7 +288,6 @@ body {
     margin: 0 0.9% 2%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
   }
@@ -329,7 +311,6 @@ body {
   .container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
   }
@@ -337,7 +318,8 @@ body {
     position: relative;
     width: 100%;
     padding: 10px;
-    box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
+    -webkit-box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
+            box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
   }
   .container .sidebar footer .contact .contact-title {
     display: none;
@@ -348,23 +330,20 @@ body {
   .container .blogBox {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
         -ms-flex-direction: row;
             flex-direction: row;
-    -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
-    box-sizing: border-box;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding: 20px 10px;
   }
   .container .blogBox .articleBox {
     display: -webkit-box;
-    display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
         -ms-flex-direction: row;
             flex-direction: row;
   }
@@ -374,7 +353,6 @@ body {
     margin: 0 0.9% 2%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
   }
@@ -392,7 +370,6 @@ body {
   .container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
   }
@@ -400,15 +377,16 @@ body {
     position: relative;
     width: 100%;
     padding: 10px;
-    box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
+    -webkit-box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
+            box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
   }
   .container .blogBox {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding: 20px 10px;
   }
   .container .blogBox .articleBox .article {
@@ -417,7 +395,6 @@ body {
     margin: 0 0.9% 4%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
   }
