--- a/_layouts/Index.html
+++ b/_layouts/Index.html
@@ -4,8 +4,8 @@
 	<title>Peng 首页</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="shortcut icon" type="image/x-icon" href="/peng/favicon.png">
-	<link rel="stylesheet" href="/peng/resource/css/main.css">
+	<link rel="shortcut icon" type="image/x-icon" href="/favicon.png">
+	<link rel="stylesheet" href="/resource/css/main.css">
 </head>
 <body>
 	<div class="container">
