--- a/_layouts/Index.html
+++ b/_layouts/Index.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="container">
 		<!-- 头部 -->
-		<sidebar class="sidebar">s
+		<sidebar class="sidebar">
 			{% include sidebar.html %}
 		</sidebar>
 		<!-- 内容 -->
