--- a/resource/less/main.less
+++ b/resource/less/main.less
@@ -168,6 +168,16 @@ body{
               color: #263959;
             }
           }
+          .article-title::before{
+            content: '原创';
+            position: relative;
+            margin-right: 4px;
+            padding: 0 2px;
+            font-size: 12px;
+            color: #bbb;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+          }
           p{
             margin-top: 0;
             line-height: 24px;
