--- a/resource/less/main.less
+++ b/resource/less/main.less
@@ -171,6 +171,7 @@ body{
           .article-title::before{
             content: '原创';
             position: relative;
+            top: -4px;
             margin-right: 4px;
             padding: 0 2px;
             font-size: 12px;
