--- a/resource/css/main.css
+++ b/resource/css/main.css
@@ -211,6 +211,7 @@ body {
 .container .blogBox .articleBox .article .article-content .article-title::before {
   content: '原创';
   position: relative;
+  top: -4px;
   margin-right: 4px;
   padding: 0 2px;
   font-size: 12px;
