--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,9 +9,20 @@
     </div>
   </header> <!-- End Header -->
 
-  <!--<div class="tags" style="background: red;height:60%;">-->
-    <!--qqq-->
-  <!--</div>-->
+  <content>
+      <div class="tags-container">
+          <a class="tag" href="/">全部</a>
+          <a class="tag" href="/front">前端杂记</a>
+          <a class="tag" href="/end">后端杂记</a>
+          <!--<a class="tag">电影分享</a>-->
+          <!--<a class="tag">读书笔记</a>-->
+          <!--<a class="tag">随便写写</a>-->
+          <!--<a class="tag">随便拍拍</a>-->
+      </div>
+      <!--<div class="img-container">-->
+          <!--<img src="/resource/images/wechat.jpg" width="100%" alt="wechat">-->
+      <!--</div>-->
+  </content>
 
   <footer>
     <section class="contact">
@@ -22,6 +33,6 @@
       </div>
     </section> <!-- End Section Contact -->
     <div class="copy-right">
-      <p>2017 © Peng Chen</p>
+      <p>2018 © Peng Chen</p>
     </div>
   </footer> <!-- End Footer -->
