--- a/_layouts/Index.html
+++ b/_layouts/Index.html
@@ -7,6 +7,7 @@
 	<!--<link rel="shortcut icon" type="image/x-icon" href="/peng/favicon.png">-->
 	<!--<link rel="stylesheet" href="/peng/resource/css/main.css">-->
 	<link rel="shortcut icon" type="image/x-icon" href="/favicon.png">
+    <link rel="stylesheet" href="/resource/css/blog_md.css">
 	<link rel="stylesheet" href="/resource/css/main.css">
 </head>
 <body>
