--- a/resource/css/main.css
+++ b/resource/css/main.css
@@ -9,25 +9,29 @@ body {
 }
 .container {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
   position: relative;
   max-width: 1250px;
 }
 .container .sidebar {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
   -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
   position: fixed;
@@ -41,16 +45,20 @@ body {
 }
 .container .sidebar header .about {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
   -webkit-box-pack: center;
+  -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
+  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
 }
@@ -62,8 +70,7 @@ body {
 }
 .container .sidebar header .about .cover-author-image a {
   display: block;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 .container .sidebar header .about .cover-author-image img {
   width: 100px;
@@ -79,6 +86,41 @@ body {
 }
 .container .sidebar header .about p {
   margin: 0 0 10px;
+}
+.container .sidebar content {
+  height: 60%;
+}
+.container .sidebar content .tags-container {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+}
+.container .sidebar content .tags-container .tag {
+  margin: 4px;
+  padding: 0px 4px;
+  border-radius: 4px;
+  border: 1px solid #aaa;
+  color: #aaa;
+  text-decoration: none;
+  cursor: pointer;
+  -webkit-transition: color 0.5s, border-color 0.5s;
+          transition: color 0.5s, border-color 0.5s;
+}
+.container .sidebar content .tags-container .tag:hover {
+  color: #666;
+  border-color: #666;
+}
+.container .sidebar content .img-container {
+  width: 128px;
+  height: 128px;
 }
 .container .sidebar footer .contact .contact-title {
   position: relative;
@@ -96,6 +138,7 @@ body {
   height: 2px;
   width: calc(50% - 48px);
   -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
           transform: translateY(-50%);
   position: absolute;
   top: 50%;
@@ -108,6 +151,7 @@ body {
   height: 2px;
   width: calc(50% - 48px);
   -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
           transform: translateY(-50%);
   position: absolute;
   top: 50%;
@@ -116,9 +160,11 @@ body {
 }
 .container .sidebar footer .contact .icon-group {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
+  -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
   padding: 8px 0 0;
@@ -129,7 +175,7 @@ body {
   height: 24px;
   padding: 0 6px;
   -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
+          transition: all 0.3s ease;
   -webkit-filter: grayscale(100%);
           filter: grayscale(100%);
   opacity: 0.66;
@@ -147,32 +193,37 @@ body {
   margin: 16px 0;
 }
 .container .blogBox {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   padding: 20px 20px 20px 260px;
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
   -webkit-box-pack: center;
+  -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
   width: 100%;
 }
 .container .blogBox .articleBox {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
 }
 .container .blogBox .articleBox .article {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   max-width: 970px;
@@ -180,9 +231,8 @@ body {
   margin-bottom: 24px;
   background: #fff;
   -webkit-transition: all .3s ease;
-  transition: all .3s ease;
-  -webkit-box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
-          box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
+          transition: all .3s ease;
+  box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
   overflow: hidden;
 }
 .container .blogBox .articleBox .article .article-img {
@@ -193,8 +243,7 @@ body {
 }
 .container .blogBox .articleBox .article .article-content {
   width: 70%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   padding: 16px;
 }
 .container .blogBox .articleBox .article .article-content .article-title {
@@ -229,15 +278,17 @@ body {
 }
 .container .blogBox .articleBox .article:hover {
   -webkit-transform: translate(0px, -2px);
+      -ms-transform: translate(0px, -2px);
           transform: translate(0px, -2px);
-  -webkit-box-shadow: 0 15px 45px -10px rgba(10, 16, 34, 0.2);
-          box-shadow: 0 15px 45px -10px rgba(10, 16, 34, 0.2);
+  box-shadow: 0 15px 45px -10px rgba(10, 16, 34, 0.2);
 }
 .container .blogBox .paginationBox {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
       -ms-flex-pack: start;
           justify-content: flex-start;
   width: 100%;
@@ -260,21 +311,21 @@ body {
 .container .blogBox .paginationBox .pageNum a:hover {
   color: #fff;
   background: #3385ff;
-  -webkit-box-shadow: 1px 1px 10px 0 #333;
-          box-shadow: 1px 1px 10px 0 #333;
+  box-shadow: 1px 1px 10px 0 #333;
 }
 .container .blogBox .paginationBox .active a {
   color: #fff;
   background: #3385ff;
-  -webkit-box-shadow: 1px 1px 10px 0 #333;
-          box-shadow: 1px 1px 10px 0 #333;
+  box-shadow: 1px 1px 10px 0 #333;
 }
 .container .blogBox .contentBox {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
   width: 100%;
@@ -284,14 +335,17 @@ body {
 @media only screen and (max-width: 992px) {
   .container .blogBox .articleBox {
     display: -webkit-box;
+    display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
         -ms-flex-direction: row;
             flex-direction: row;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
   }
   .container .blogBox .articleBox .article {
     width: 48%;
@@ -299,6 +353,7 @@ body {
     margin: 0 0.9% 2%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
   }
@@ -322,6 +377,7 @@ body {
   .container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
   }
@@ -329,8 +385,7 @@ body {
     position: relative;
     width: 100%;
     padding: 10px;
-    -webkit-box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
-            box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
+    box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
   }
   .container .sidebar footer .contact .contact-title {
     display: none;
@@ -341,20 +396,23 @@ body {
   .container .blogBox {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
         -ms-flex-direction: row;
             flex-direction: row;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    box-sizing: border-box;
     padding: 20px 10px;
   }
   .container .blogBox .articleBox {
     display: -webkit-box;
+    display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
         -ms-flex-direction: row;
             flex-direction: row;
   }
@@ -364,6 +422,7 @@ body {
     margin: 0 0.9% 2%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
   }
@@ -381,6 +440,7 @@ body {
   .container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
   }
@@ -388,16 +448,15 @@ body {
     position: relative;
     width: 100%;
     padding: 10px;
-    -webkit-box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
-            box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
+    box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
   }
   .container .blogBox {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
     padding: 20px 10px;
   }
   .container .blogBox .articleBox .article {
@@ -406,6 +465,7 @@ body {
     margin: 0 0.9% 4%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
   }
