tags permalink => categories

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
   <header>
     <div class="about">
       <div class="cover-author-image">
-        <a href="#"><img src="/resource/images/portrait.jpg" alt="Peng Chen"></a>
+        <a href="/#"><img src="/resource/images/portrait.jpg" alt="Peng Chen"></a>
       </div>
       <div class="author-name">Peng Chen</div>
       <p>海贼王に俺はなる</p>
@@ -11,9 +11,9 @@
 
   <content>
       <div class="tags-container">
-          <a class="tag" href="/">全部</a>
-          <a class="tag" href="/front">前端杂记</a>
-          <a class="tag" href="/end">后端杂记</a>
+          <a class="tag" href="/tags/all.html">全部</a>
+          <a class="tag" href="/tags/front.html">前端杂记</a>
+          <a class="tag" href="/tags/end.html">后端杂记</a>
           <!--<a class="tag">电影分享</a>-->
           <!--<a class="tag">读书笔记</a>-->
           <!--<a class="tag">随便写写</a>-->
@@ -28,6 +28,7 @@
     <section class="contact">
       <h3 class="contact-title">Contact me</h3>
       <div class="icon-group">
+        <!--<a href="tencent://message/?uin=2601349541&Site=qq&Menu=yes"><img src="/resource/images/qq.jpg" alt="qq"></a>-->
         <a href="https://github.com/PengChen96"><img src="/resource/images/github.png" alt="github"></a>
         <a href="https://juejin.im/user/58c39cfe44d9040069841629"><img src="/resource/images/juejin.png" alt="github"></a>
       </div>
