--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,6 +14,7 @@
           <a class="tag" href="/tags/all.html">全部</a>
           <a class="tag" href="/tags/front.html">前端杂记</a>
           <a class="tag" href="/tags/end.html">后端杂记</a>
+          <a class="tag" href="/tags/code_snippet.html">代码片段</a>
           <!--<a class="tag">电影分享</a>-->
           <!--<a class="tag">读书笔记</a>-->
           <!--<a class="tag">随便写写</a>-->
