--- a/resource/css/blog_md.css
+++ b/resource/css/blog_md.css
@@ -61,8 +61,7 @@ li > ol {
  */
 h1, h2, h3, h4, h5, h6 {
   font-weight: bold; 
-  margin-top: 15px;
-  margin-bottom: 0px;
+  margin: 12px 0;
 }
 h1{
   font-size: 28px;
