--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -16,15 +16,14 @@
 			height:16px;
             border-top: 1px solid #bbb;
         }
-		.article-title::before{
-			content: '原创';
-			position: relative;
+		.article-source {
 			margin-right: 4px;
 			padding: 0 2px;
-			font-size: 12px;
 			color: #bbb;
 			border-radius: 4px;
 			border: 1px solid #ccc;
+			font-weight: normal;
+			font-size: 12px;
 		}
     </style>
 </head>
@@ -39,6 +38,8 @@
 		<div class="contentBox">
 			<h1>{{page.title}}</h1>
 			<p class="article-title" style="margin:0;line-height:32px;color:#aaa;">
+				<span class="article-source">{{ page.source }}</span>
+				<span class="article-source">{{ page.type }}</span>
 				{{page.author}}&nbsp;&nbsp;&nbsp;&nbsp;{{ page.date| date: "%Y, %B %d" }}<!--{{page.date}} -->
                 <!--阅读数-->
                 {% if site.leancloud.enable %}
