--- a/resource/css/main.css
+++ b/resource/css/main.css
@@ -251,22 +251,28 @@ body {
   font-size: 30px;
   line-height: 1.5;
   font-weight: 600;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .container .blogBox .articleBox .article .article-content .article-title a {
   font-family: 'PT Serif', serif;
   text-decoration: none;
   color: #263959;
 }
-.container .blogBox .articleBox .article .article-content .article-title::before {
-  content: '原创';
-  position: relative;
-  top: -4px;
-  margin-right: 4px;
+.container .blogBox .articleBox .article .article-content .article-source {
+  margin-left: 4px;
   padding: 0 2px;
-  font-size: 12px;
   color: #bbb;
   border-radius: 4px;
   border: 1px solid #ccc;
+  font-weight: normal;
+  font-size: 12px;
 }
 .container .blogBox .articleBox .article .article-content p {
   margin-top: 0;
