--- a/resource/less/main.less
+++ b/resource/less/main.less
@@ -189,22 +189,22 @@ body{
             font-size: 30px;
             line-height: 1.5;
             font-weight: 600;
+            display: flex;
+            align-items: center;
             a{
               font-family: 'PT Serif', serif;
               text-decoration: none;
               color: #263959;
             }
           }
-          .article-title::before{
-            content: '原创';
-            position: relative;
-            top: -4px;
-            margin-right: 4px;
+          .article-source {
+            margin-left: 4px;
             padding: 0 2px;
-            font-size: 12px;
             color: #bbb;
             border-radius: 4px;
             border: 1px solid #ccc;
+            font-weight: normal;
+            font-size: 12px;
           }
           p{
             margin-top: 0;
